test/CheckError/Const/ConstPointerTransitivity.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct S {
	int* p;
};

void f(const S* value) {
	// CHECK: .loci:10:2: error: cannot assign non-movable type 'const(int_t)'
	*(value->p) = 1;
}

void g(S* value) {
	*(value->p) = 1;
}

// CHECK: 1 error generated.
